--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>Вопросы по JavaScript и Git</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="/bookmark.png"  type="image/png">
 </head>
 <body>
 
