--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>Вопросы по JavaScript и Git</title>
+    <title>Конспект теории по веб-разработке (вопросы) </title>
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="/favicon.png"  type="image/png">
 </head>
