--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Конспект теории по веб-разработке (вопросы) </title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="shortcut icon" href="/favicon.png"  type="image/png">
+    <link rel="shortcut icon" href="img/favicon.png"  type="image/png">
 </head>
 <body>
 
