--- a/index.html
+++ b/index.html
@@ -873,6 +873,7 @@
           <li>Что такое <i>MVC</i>?
               <span class="answer">Ответ</span></li>
           <p><a href="https://amiskov.github.io/frontend-handbook/jquery/#%D0%B1%D1%8B%D1%81%D1%82%D1%80%D1%8B%D0%B9-%D1%81%D1%82%D0%B0%D1%80%D1%82">Инфа для изучения jQuery</a></p>
+          <p><a href="https://antonshevchuk.gitbooks.io/jquery-for-beginners/content/">Учебник по jQuery</a></p>
       </ol>
 
       <h1 title="React — JavaScript-библиотека с открытым исходным кодом для разработки пользовательских интерфейсов.">React</h1>
