--- a/index.html
+++ b/index.html
@@ -950,6 +950,6 @@
           <a href="https://tproger.ru/translations/oop-js-fundamentals/">Tproger</a>.
       </p>
   </div>
-
+<script src="JsCode.js"></script>
 </body>
 </html>
