--- a/index.html
+++ b/index.html
@@ -986,16 +986,16 @@
       <h2>Основные понятия</h2>
       <ul>
           <li>Инкапсуляция - свойство системы, позволяющее объединить данные и методы, работающие с ними, в классе.
-              <q>Инкапсуляция — объект независим: каждый объект устроен так, что нужные для него данные живут внутри этого объекта, а не где-то снаружи в программе. Например, если у меня есть объект «Пользователь»,
+              <q> <i>Инкапсуляция — объект независим:</i> каждый объект устроен так, что нужные для него данные живут внутри этого объекта, а не где-то снаружи в программе. Например, если у меня есть объект «Пользователь»,
               то у меня в нём будут все данные о пользователе: и имя, и адрес, и всё остальное. И в нём же будут методы «Проверить адрес» или «Подписать на рассылку». </q></li>
           <li>Абстракция - отделение концепции от ее экземпляра.
-<q>Абстракция — у объекта есть «интерфейс»: у объекта есть методы и свойства, к которым мы можем обратиться извне этого объекта. Так же, как мы можем нажать кнопку на блендере.
+<q><i>Абстракция — у объекта есть «интерфейс»:</i> у объекта есть методы и свойства, к которым мы можем обратиться извне этого объекта. Так же, как мы можем нажать кнопку на блендере.
  У блендера есть много всего внутри, что заставляет его работать, но на главной панели есть только кнопка. Вот эта кнопка и есть абстрактный интерфейс.</q> </li>
 <li>Наследование – позволяет создать новый класс на основе уже существующего, частично или полностью заимствуя его функциональность. 
-               <q>Наследование — способность к копированию. ООП позволяет создавать много объектов по образу и подобию другого объекта. 
+               <q><i>Наследование — способность к копированию.</i> ООП позволяет создавать много объектов по образу и подобию другого объекта. 
 Это позволяет не копипастить код по двести раз, а один раз нормально написать и потом много раз использовать.</q></li>
 <li>Полиморфизм – использование объектов с одинаковым интерфейсом без информации о типе и внутренней структуре объекта.
-    <q>Полиморфизм — единый язык общения. В ООП важно, чтобы все объекты общались друг с другом на понятном им языке.
+    <q><i>Полиморфизм — единый язык общения.</i> В ООП важно, чтобы все объекты общались друг с другом на понятном им языке.
  И если у разных объектов есть метод «Удалить», то он должен делать именно это и писаться везде одинаково.
  Нельзя, чтобы у одного объекта это было «Удалить», а у другого «Стереть». </q> </li>
           <li>Класс – такая абстракция множества предметов реального мира, что все предметы этого множества(объекты) имеют одни и те же характеристики, все экземпляры подчинены и согласованы с одним и тем же поведением; </li>
