--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>Конспект теории по веб-разработке (вопросы) </title>
+    <link rel="manifest" href="manifest.json">
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" href="img/favicon.png"  type="image/png">
 </head>
@@ -1011,5 +1012,16 @@
       </p>
   </div>
 <script src="JsCode.js"></script>
+<script>
+ if ('serviceWorker' in navigator) {
+    console.log("Will the service worker register?");
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function(reg){
+        console.log("Yes, it did.");
+     }).catch(function(err) {
+        console.log("No it didn't. This happened:", err)
+    });
+ }
+</script>
 </body>
 </html>
